# yaegi

./: .gitignore  BUILD.bazel  WORKSPACE  deps.bzl  generate.go  go.mod
_test/: composite6.go  d3.go  eval0.go  import3.go  import4.go  import5.go  import6.go  import7.go  import8.go  import9.go  inception.go  issue-1355.go  method38.go  method39.go  named3.go  p5.go  p6.go  tag0.go  var14.go
_test/b1/foo/: BUILD.bazel  foo.go
_test/b2/foo/: BUILD.bazel
_test/baz-bat/: BUILD.bazel
_test/c1/: BUILD.bazel  c1.go
_test/c2/: BUILD.bazel  c2.go
_test/ct/: BUILD.bazel
_test/ct1/: BUILD.bazel
_test/d1/: BUILD.bazel
_test/d2/: BUILD.bazel  d2.go
_test/foo/: BUILD.bazel  bar.go  bir.go
_test/foo-bar/: BUILD.bazel
_test/foo/boo/: BUILD.bazel
_test/m1/: BUILD.bazel
_test/m2/: BUILD.bazel
_test/method38/: BUILD.bazel
_test/named3/: BUILD.bazel
_test/p1/: BUILD.bazel
_test/p2/: BUILD.bazel
_test/p4/: BUILD.bazel
_test/p5/: BUILD.bazel  p5.go
_test/p6/: BUILD.bazel
_test/testdata/redeclaration-global7/src/guthib.com/bar/: BUILD.bazel
_test/testdata/redeclaration-global7/src/guthib.com/baz/: BUILD.bazel
_test/testdata/redeclaration-global7/src/guthib.com/tata/: BUILD.bazel
_test/testdata/redeclaration-global7/src/guthib.com/toto/: BUILD.bazel
_test/vars/: BUILD.bazel
cmd/yaegi/: BUILD.bazel  extract.go  run.go  test.go  yaegi.go
example/closure/: BUILD.bazel  closure_test.go
example/closure/_pkg/src/foo/bar/: BUILD.bazel
example/fs/: BUILD.bazel  fs_test.go
example/getfunc/: BUILD.bazel  getfunc_test.go
example/getfunc/_gopath/src/github.com/foo/bar/: BUILD.bazel
example/pkg/: BUILD.bazel  pkg_test.go
example/pkg/_pkg/src/github.com/foo/pkg/: BUILD.bazel
example/pkg/_pkg0/src/github.com/foo/pkg/: BUILD.bazel
example/pkg/_pkg0/src/github.com/foo/pkg/fromage/: BUILD.bazel
example/pkg/_pkg0/src/github.com/foo/pkg/fromage/cheese/: BUILD.bazel
example/pkg/_pkg1/src/github.com/foo/pkg/: BUILD.bazel
example/pkg/_pkg1/src/github.com/foo/pkg/fromage/: BUILD.bazel
example/pkg/_pkg10/src/github.com/foo/: BUILD.bazel
example/pkg/_pkg11/src/foo/: BUILD.bazel
example/pkg/_pkg12/src/guthib.com/foo/: BUILD.bazel
example/pkg/_pkg12/src/guthib.com/foo/pkg/: BUILD.bazel
example/pkg/_pkg13/src/guthib.com/foo/bar/: BUILD.bazel
example/pkg/_pkg2/src/github.com/foo/pkg/: BUILD.bazel
example/pkg/_pkg3/src/github.com/foo/pkg/: BUILD.bazel
example/pkg/_pkg4/src/github.com/foo/pkg/: BUILD.bazel
example/pkg/_pkg5/src/github.com/foo/pkg/: BUILD.bazel
example/pkg/_pkg6/src/github.com/foo/pkg/: BUILD.bazel
example/pkg/_pkg6/src/guthib.com/traefik/cheese/: BUILD.bazel
example/pkg/_pkg6/src/guthib.com/traefik/cheese/vin/: BUILD.bazel
example/pkg/_pkg7/src/github.com/foo/pkg/: BUILD.bazel
example/pkg/_pkg8/src/github.com/foo/pkg/: BUILD.bazel
example/pkg/_pkg8/src/github.com/foo/pkg/fromage/: BUILD.bazel
example/pkg/_pkg9/src/github.com/foo/pkg/: BUILD.bazel
example/pkg/_pkg9/src/github.com/foo/pkg/fromage/: BUILD.bazel
extract/: BUILD.bazel  extract.go
extract/testdata/1/src/guthib.com/bar/: BUILD.bazel
extract/testdata/1/src/guthib.com/baz/: BUILD.bazel
extract/testdata/2/src/guthib.com/bar/: BUILD.bazel
extract/testdata/2/src/guthib.com/baz/: BUILD.bazel
extract/testdata/3/src/guthib.com/bar/: BUILD.bazel
extract/testdata/3/src/guthib.com/baz/: BUILD.bazel
extract/testdata/4/src/guthib.com/bar/: BUILD.bazel
extract/testdata/5/src/guthib.com/bar/: BUILD.bazel
extract/testdata/6/src/guthib.com/bar/: BUILD.bazel
extract/testdata/6/src/guthib.com/baz-baz/: BUILD.bazel
extract/testdata/7/src/guthib.com/variadic/: BUILD.bazel
internal/cmd/extract/: BUILD.bazel  extract.go
internal/cmd/genop/: BUILD.bazel
internal/unsafe2/: BUILD.bazel  unsafe_test.go
interp/: BUILD.bazel  compile_test.go  debug.go  example_eval_test.go  interp.go  interp_consistent_test.go  interp_eval_test.go  interp_export_test.go  interp_file_test.go  interp_test.go  program.go  program_test.go  self_example_test.go  type.go  typecheck.go  use.go  wrap.go
interp/testdata/concurrent/: BUILD.bazel
interp/testdata/concurrent/composite/: BUILD.bazel
interp/testdata/src/github.com/foo/bar/baz/: BUILD.bazel
stdlib/: BUILD.bazel  stdlib.go
stdlib/generic/: BUILD.bazel
stdlib/syscall/: BUILD.bazel  syscall.go
stdlib/unrestricted/: BUILD.bazel  unrestricted.go
stdlib/unsafe/: BUILD.bazel  unsafe.go
