load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:prefix github.com/findyourpaths/yaegi
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "yaegi",
    srcs = ["generate.go"],
    importpath = "github.com/findyourpaths/yaegi",
    visibility = ["//visibility:public"],
)
