load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "extract",
    srcs = ["extract.go"],
    importpath = "github.com/findyourpaths/yaegi/extract",
    visibility = ["//visibility:public"],
)

go_test(
    name = "extract_test",
    srcs = ["extract_test.go"],
    embed = [":extract"],
)
