load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "stdlib",
    srcs = [
        "go1_21_archive_tar.go",
        "go1_21_archive_zip.go",
        "go1_21_bufio.go",
        "go1_21_bytes.go",
        "go1_21_cmp.go",
        "go1_21_compress_bzip2.go",
        "go1_21_compress_flate.go",
        "go1_21_compress_gzip.go",
        "go1_21_compress_lzw.go",
        "go1_21_compress_zlib.go",
        "go1_21_container_heap.go",
        "go1_21_container_list.go",
        "go1_21_container_ring.go",
        "go1_21_context.go",
        "go1_21_crypto.go",
        "go1_21_crypto_aes.go",
        "go1_21_crypto_cipher.go",
        "go1_21_crypto_des.go",
        "go1_21_crypto_dsa.go",
        "go1_21_crypto_ecdh.go",
        "go1_21_crypto_ecdsa.go",
        "go1_21_crypto_ed25519.go",
        "go1_21_crypto_elliptic.go",
        "go1_21_crypto_hmac.go",
        "go1_21_crypto_md5.go",
        "go1_21_crypto_rand.go",
        "go1_21_crypto_rc4.go",
        "go1_21_crypto_rsa.go",
        "go1_21_crypto_sha1.go",
        "go1_21_crypto_sha256.go",
        "go1_21_crypto_sha512.go",
        "go1_21_crypto_subtle.go",
        "go1_21_crypto_tls.go",
        "go1_21_crypto_x509.go",
        "go1_21_crypto_x509_pkix.go",
        "go1_21_database_sql.go",
        "go1_21_database_sql_driver.go",
        "go1_21_debug_buildinfo.go",
        "go1_21_debug_dwarf.go",
        "go1_21_debug_elf.go",
        "go1_21_debug_gosym.go",
        "go1_21_debug_macho.go",
        "go1_21_debug_pe.go",
        "go1_21_debug_plan9obj.go",
        "go1_21_encoding.go",
        "go1_21_encoding_ascii85.go",
        "go1_21_encoding_asn1.go",
        "go1_21_encoding_base32.go",
        "go1_21_encoding_base64.go",
        "go1_21_encoding_binary.go",
        "go1_21_encoding_csv.go",
        "go1_21_encoding_gob.go",
        "go1_21_encoding_hex.go",
        "go1_21_encoding_json.go",
        "go1_21_encoding_pem.go",
        "go1_21_encoding_xml.go",
        "go1_21_errors.go",
        "go1_21_expvar.go",
        "go1_21_flag.go",
        "go1_21_fmt.go",
        "go1_21_go_ast.go",
        "go1_21_go_build.go",
        "go1_21_go_build_constraint.go",
        "go1_21_go_constant.go",
        "go1_21_go_doc.go",
        "go1_21_go_doc_comment.go",
        "go1_21_go_format.go",
        "go1_21_go_importer.go",
        "go1_21_go_parser.go",
        "go1_21_go_printer.go",
        "go1_21_go_scanner.go",
        "go1_21_go_token.go",
        "go1_21_go_types.go",
        "go1_21_hash.go",
        "go1_21_hash_adler32.go",
        "go1_21_hash_crc32.go",
        "go1_21_hash_crc64.go",
        "go1_21_hash_fnv.go",
        "go1_21_hash_maphash.go",
        "go1_21_html.go",
        "go1_21_html_template.go",
        "go1_21_image.go",
        "go1_21_image_color.go",
        "go1_21_image_color_palette.go",
        "go1_21_image_draw.go",
        "go1_21_image_gif.go",
        "go1_21_image_jpeg.go",
        "go1_21_image_png.go",
        "go1_21_index_suffixarray.go",
        "go1_21_io.go",
        "go1_21_io_fs.go",
        "go1_21_io_ioutil.go",
        "go1_21_log.go",
        "go1_21_log_slog.go",
        "go1_21_log_syslog.go",
        "go1_21_maps.go",
        "go1_21_math.go",
        "go1_21_math_big.go",
        "go1_21_math_bits.go",
        "go1_21_math_cmplx.go",
        "go1_21_math_rand.go",
        "go1_21_mime.go",
        "go1_21_mime_multipart.go",
        "go1_21_mime_quotedprintable.go",
        "go1_21_net.go",
        "go1_21_net_http.go",
        "go1_21_net_http_cgi.go",
        "go1_21_net_http_cookiejar.go",
        "go1_21_net_http_fcgi.go",
        "go1_21_net_http_httptest.go",
        "go1_21_net_http_httptrace.go",
        "go1_21_net_http_httputil.go",
        "go1_21_net_http_pprof.go",
        "go1_21_net_mail.go",
        "go1_21_net_netip.go",
        "go1_21_net_rpc.go",
        "go1_21_net_rpc_jsonrpc.go",
        "go1_21_net_smtp.go",
        "go1_21_net_textproto.go",
        "go1_21_net_url.go",
        "go1_21_os.go",
        "go1_21_os_signal.go",
        "go1_21_os_user.go",
        "go1_21_path.go",
        "go1_21_path_filepath.go",
        "go1_21_reflect.go",
        "go1_21_regexp.go",
        "go1_21_regexp_syntax.go",
        "go1_21_runtime.go",
        "go1_21_runtime_debug.go",
        "go1_21_runtime_metrics.go",
        "go1_21_runtime_pprof.go",
        "go1_21_runtime_trace.go",
        "go1_21_slices.go",
        "go1_21_sort.go",
        "go1_21_strconv.go",
        "go1_21_strings.go",
        "go1_21_sync.go",
        "go1_21_sync_atomic.go",
        "go1_21_testing.go",
        "go1_21_testing_fstest.go",
        "go1_21_testing_iotest.go",
        "go1_21_testing_quick.go",
        "go1_21_testing_slogtest.go",
        "go1_21_text_scanner.go",
        "go1_21_text_tabwriter.go",
        "go1_21_text_template.go",
        "go1_21_text_template_parse.go",
        "go1_21_time.go",
        "go1_21_unicode.go",
        "go1_21_unicode_utf16.go",
        "go1_21_unicode_utf8.go",
        "go1_22_archive_tar.go",
        "go1_22_archive_zip.go",
        "go1_22_bufio.go",
        "go1_22_bytes.go",
        "go1_22_cmp.go",
        "go1_22_compress_bzip2.go",
        "go1_22_compress_flate.go",
        "go1_22_compress_gzip.go",
        "go1_22_compress_lzw.go",
        "go1_22_compress_zlib.go",
        "go1_22_container_heap.go",
        "go1_22_container_list.go",
        "go1_22_container_ring.go",
        "go1_22_context.go",
        "go1_22_crypto.go",
        "go1_22_crypto_aes.go",
        "go1_22_crypto_cipher.go",
        "go1_22_crypto_des.go",
        "go1_22_crypto_dsa.go",
        "go1_22_crypto_ecdh.go",
        "go1_22_crypto_ecdsa.go",
        "go1_22_crypto_ed25519.go",
        "go1_22_crypto_elliptic.go",
        "go1_22_crypto_hmac.go",
        "go1_22_crypto_md5.go",
        "go1_22_crypto_rand.go",
        "go1_22_crypto_rc4.go",
        "go1_22_crypto_rsa.go",
        "go1_22_crypto_sha1.go",
        "go1_22_crypto_sha256.go",
        "go1_22_crypto_sha512.go",
        "go1_22_crypto_subtle.go",
        "go1_22_crypto_tls.go",
        "go1_22_crypto_x509.go",
        "go1_22_crypto_x509_pkix.go",
        "go1_22_database_sql.go",
        "go1_22_database_sql_driver.go",
        "go1_22_debug_buildinfo.go",
        "go1_22_debug_dwarf.go",
        "go1_22_debug_elf.go",
        "go1_22_debug_gosym.go",
        "go1_22_debug_macho.go",
        "go1_22_debug_pe.go",
        "go1_22_debug_plan9obj.go",
        "go1_22_encoding.go",
        "go1_22_encoding_ascii85.go",
        "go1_22_encoding_asn1.go",
        "go1_22_encoding_base32.go",
        "go1_22_encoding_base64.go",
        "go1_22_encoding_binary.go",
        "go1_22_encoding_csv.go",
        "go1_22_encoding_gob.go",
        "go1_22_encoding_hex.go",
        "go1_22_encoding_json.go",
        "go1_22_encoding_pem.go",
        "go1_22_encoding_xml.go",
        "go1_22_errors.go",
        "go1_22_expvar.go",
        "go1_22_flag.go",
        "go1_22_fmt.go",
        "go1_22_go_ast.go",
        "go1_22_go_build.go",
        "go1_22_go_build_constraint.go",
        "go1_22_go_constant.go",
        "go1_22_go_doc.go",
        "go1_22_go_doc_comment.go",
        "go1_22_go_format.go",
        "go1_22_go_importer.go",
        "go1_22_go_parser.go",
        "go1_22_go_printer.go",
        "go1_22_go_scanner.go",
        "go1_22_go_token.go",
        "go1_22_go_types.go",
        "go1_22_go_version.go",
        "go1_22_hash.go",
        "go1_22_hash_adler32.go",
        "go1_22_hash_crc32.go",
        "go1_22_hash_crc64.go",
        "go1_22_hash_fnv.go",
        "go1_22_hash_maphash.go",
        "go1_22_html.go",
        "go1_22_html_template.go",
        "go1_22_image.go",
        "go1_22_image_color.go",
        "go1_22_image_color_palette.go",
        "go1_22_image_draw.go",
        "go1_22_image_gif.go",
        "go1_22_image_jpeg.go",
        "go1_22_image_png.go",
        "go1_22_index_suffixarray.go",
        "go1_22_io.go",
        "go1_22_io_fs.go",
        "go1_22_io_ioutil.go",
        "go1_22_log.go",
        "go1_22_log_slog.go",
        "go1_22_log_syslog.go",
        "go1_22_maps.go",
        "go1_22_math.go",
        "go1_22_math_big.go",
        "go1_22_math_bits.go",
        "go1_22_math_cmplx.go",
        "go1_22_math_rand.go",
        "go1_22_math_rand_v2.go",
        "go1_22_mime.go",
        "go1_22_mime_multipart.go",
        "go1_22_mime_quotedprintable.go",
        "go1_22_net.go",
        "go1_22_net_http.go",
        "go1_22_net_http_cgi.go",
        "go1_22_net_http_cookiejar.go",
        "go1_22_net_http_fcgi.go",
        "go1_22_net_http_httptest.go",
        "go1_22_net_http_httptrace.go",
        "go1_22_net_http_httputil.go",
        "go1_22_net_http_pprof.go",
        "go1_22_net_mail.go",
        "go1_22_net_netip.go",
        "go1_22_net_rpc.go",
        "go1_22_net_rpc_jsonrpc.go",
        "go1_22_net_smtp.go",
        "go1_22_net_textproto.go",
        "go1_22_net_url.go",
        "go1_22_os.go",
        "go1_22_os_signal.go",
        "go1_22_os_user.go",
        "go1_22_path.go",
        "go1_22_path_filepath.go",
        "go1_22_reflect.go",
        "go1_22_regexp.go",
        "go1_22_regexp_syntax.go",
        "go1_22_runtime.go",
        "go1_22_runtime_debug.go",
        "go1_22_runtime_metrics.go",
        "go1_22_runtime_pprof.go",
        "go1_22_runtime_trace.go",
        "go1_22_slices.go",
        "go1_22_sort.go",
        "go1_22_strconv.go",
        "go1_22_strings.go",
        "go1_22_sync.go",
        "go1_22_sync_atomic.go",
        "go1_22_testing.go",
        "go1_22_testing_fstest.go",
        "go1_22_testing_iotest.go",
        "go1_22_testing_quick.go",
        "go1_22_testing_slogtest.go",
        "go1_22_text_scanner.go",
        "go1_22_text_tabwriter.go",
        "go1_22_text_template.go",
        "go1_22_text_template_parse.go",
        "go1_22_time.go",
        "go1_22_unicode.go",
        "go1_22_unicode_utf16.go",
        "go1_22_unicode_utf8.go",
        "maptypes.go",
        "restricted.go",
        "stdlib.go",
        "stdlib-go1.22.go",
        "wrapper-composed.go",
    ],
    importpath = "github.com/findyourpaths/yaegi/stdlib",
    visibility = ["//visibility:public"],
)
