load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "m1_lib",
    srcs = ["main.go"],
    importpath = "github.com/findyourpaths/yaegi/_test/m1",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "m1",
    embed = [":m1_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "m1_test",
    srcs = ["main_test.go"],
    embed = [":m1_lib"],
)
