load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "genop_lib",
    srcs = ["genop.go"],
    importpath = "github.com/findyourpaths/yaegi/internal/cmd/genop",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "genop",
    embed = [":genop_lib"],
    visibility = ["//:__subpackages__"],
)
