load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "foo_lib",
    srcs = ["foo.go"],
    importpath = "github.com/findyourpaths/yaegi/example/pkg/_pkg11/src/foo",
    visibility = ["//visibility:private"],
    deps = ["//example/pkg/_pkg11/src/foo/vendor/guthib.com/traefik/fromage"],
)

go_binary(
    name = "foo",
    embed = [":foo_lib"],
    visibility = ["//visibility:public"],
)
