load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "foo_lib",
    srcs = ["main.go"],
    importpath = "github.com/findyourpaths/yaegi/example/pkg/_pkg12/src/guthib.com/foo",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "foo",
    embed = [":foo_lib"],
    visibility = ["//visibility:public"],
)
