load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bar_lib",
    srcs = ["main.go"],
    importpath = "github.com/findyourpaths/yaegi/extract/testdata/4/src/guthib.com/bar",
    visibility = ["//visibility:private"],
    deps = ["//extract/testdata/4/src/guthib.com/bar/vendor/guthib.com/baz"],
)

go_binary(
    name = "bar",
    embed = [":bar_lib"],
    visibility = ["//visibility:public"],
)
