load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bar_lib",
    srcs = ["main.go"],
    importpath = "github.com/findyourpaths/yaegi/extract/testdata/6/src/guthib.com/bar",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "bar",
    embed = [":bar_lib"],
    visibility = ["//visibility:public"],
)
