load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pkg",
    srcs = ["pkg.go"],
    importpath = "github.com/findyourpaths/yaegi/example/pkg/_pkg12/src/guthib.com/foo/pkg",
    visibility = ["//visibility:public"],
    deps = ["//example/pkg/_pkg12/src/guthib.com/foo/vendor/guthib.com/bar"],
)
