load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bar_lib",
    srcs = ["main.go"],
    importpath = "github.com/findyourpaths/yaegi/example/pkg/_pkg13/src/guthib.com/foo/bar",
    visibility = ["//visibility:private"],
    deps = ["//example/pkg/_pkg13/src/guthib.com/foo/bar/vendor/guthib.com/bat/baz"],
)

go_binary(
    name = "bar",
    embed = [":bar_lib"],
    visibility = ["//visibility:public"],
)
